# glue-solar

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  CHANGES.rst  LICENSE  LICENSE.rst  README.rst  _typos.toml  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
docs/: api_reference.rst  code-reference.rst  conf.py  contributing.rst  dev-docs-for-loader-customization.rst  developers-guide.rst  guide-to-glue-1dprofile-viewer-for-iris-data.rst  index.rst  loading-aia-and-hmi.rst  loading-iris-level-2-raster-and-sji-data.rst  nitpick-exceptions  user-guide.rst  users-guide.rst
docs/dev_guide/: index.rst  loader-customization.rst
docs/user_guide/: guide-to-glue-1dprofile-viewer-for-iris-data.rst  index.rst  intro.rst  loading-aia-and-hmi.rst  loading-iris-level-2-raster-and-sji-data.rst
glue_solar/: __init__.py  conftest.py  cube_slider.py  options_widget.py  options_widget.ui  pixel_extraction.py  pixel_hover.py  pixel_tool.py  pixel_viewer.py  version.py
glue_solar/core/: __init__.py  core.py  sunpy_loader.ui
glue_solar/core/sunpy_maps/: __init__.py  loader.py  loader.ui  sunpy_map_loader.ui  sunpy_maps_loader.py
glue_solar/core/viewers/profile/qt/: __init__.py  profile_viewer.py
glue_solar/instruments/: __init__.py  iris.py  sst.py  timestamp_button.py
glue_solar/instruments/iris/: iris.py  iris_loader.py  loader.py  loader.ui  stack_spectrograms.py
glue_solar/pixel_extraction/: pixel_extraction.py
glue_solar/pixel_extraction/tests/: test_pixel_extraction.py
glue_solar/pixel_tool/: layer_artist.py  state.py  viewer.py
glue_solar/pixel_tool/qt/: layer_artist.py  options_widget.py  options_widget.ui  tool.py
glue_solar/sources/: iris.py  maps.py
glue_solar/sources/loaders/: iris.py  iris_loader.ui  maps.py  maps_loader.ui  stack_spectrograms.py
glue_solar/tests/: test_iris_reader.py  test_pixel_extraction.py
glue_solar/tests/data/: iris-test-scan.fits
scripts/: iris_viewer.py
