[build-system]
requires = ["setuptools>=30.3.0", "setuptools_scm", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.isort]
line_length = 99
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,ASTRO,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "glue"
known_astro = "astropy,sunpy,gwcs,asdf,ndcube"
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
length_sort = false
length_sort_stdlib = true