[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "glue-solar"
description = "Solar Physics plugin for GlueViz"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "glue-core[all]>=1.2.0",
  "glue-qt[qt]>=0.3.0",
  "sunpy[map,net,coordinates]>=6.0.0",
  "irispy-lmsal[all]>=0.2.0rc1",
]
dynamic = ["version"]
keywords = ["solar physics", "solar", "science", "sun", "visualization", "coordinates", "glueviz"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
tests = [
  "pytest-astropy",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-automodapi>=0.14.1",
  "sphinx-changelog>=1.5.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.2.0",
  "sphinxext-opengraph>=0.6.0",
  "sunpy-sphinx-theme>=2.0.3",
  "sphinx-hoverxref>=1.3.0",
]

[project.urls]
Homepage = "https://glueviz.org"
Download = "https://pypi.org/project/glue-solar/"
"Source Code" = "https://github.com/glue-viz/glue-solar"
Documentation = "https://glue-solar.readthedocs.io/en/latest/"
Changelog = "https://glue-solar.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/glue-viz/glue-solar/issues"

[tool.setuptools]
zip-safe = true
include-package-data = true
platforms = ["any"]
provides = ["glue_solar"]
license-files = ["LICENSE.rst"]

[tool.setuptools.packages.find]
include = ["glue_solar*"]
exclude = ["glue_solar._dev*"]


[tool.setuptools_scm]
write_to = "glue_solar/_version.py"

[project.entry-points."glue.plugins"]
glue_solar = "glue_solar:setup"
