[metadata]
name = glue-solar
provides = glue_solar
author = Thomas Robitaille and Stuart Mumford
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-solar
description = Experimental Solar Physics plugin for glue
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
    astropy==4.0.0
    glue-core>=0.15
    sunpy
    reproject
    ndcube
    dask[array]

[options.extras_require]
tests =
    pytest
    pytest-cov
    mock
qt =
    PyQt5
docs =
    sphinx

[options.entry_points]
glue.plugins =
    glue_solar=glue_solar:setup
