[metadata]
name = glue-solar
provides = glue_solar
description = Solar physics focused plugin for glueviz
long_description = file: README.rst
author = TBA
author_email = TBA
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/glue-viz/glue-solar
edit_on_github = True
github_project = glueviz/glue-solar
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    PySide2 # Do I want to do this?
    glue-core>=1.2.2
    sunpy>=3.0.0

[options.extras_require]
tests =
    pytest
    pytest-doctestplus
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme

[options.entry_points]
glue.plugins =
    glue_solar=glue_solar:setup

[tool:pytest]
testpaths = "glue_solar" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    ignore:the imp module is deprecated in favour of importlib
    ignore:numpy.ndarray size changed

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    glue_solar/__init__.py,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip = docs/conf.py, glue_solar/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = glue_solar
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
    glue_solar/conftest.py
    glue_solar/*setup*
    glue_solar/*/tests/*
    glue_solar/version*
    glue_solar/__init__*
    */glue_solar/conftest.py
    */glue_solar/*setup*
    */glue_solar/*/tests/*
    */glue_solar/version*
    */glue_solar/__init__*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
